# edraft

./: .env.example  README.md  edraft-scan  pyproject.toml
config/: edraft.example.toml  edraft.toml
src/edraft/: __init__.py  __main__.py  auth.py  briefing_generator.py  briefing_matcher.py  briefing_sync.py  cli.py  config.py  db_inspector.py  draft_creator.py  draft_generator.py  email_cache.py  filters.py  graph_client.py  logging_config.py  message_fetcher.py  migrations.py  models.py  scanner.py  scheduling.py  state_store.py  style_corpus.py  style_eval.py  text_utils.py  thread_context.py
src/edraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_auth.py  test_briefing.py  test_config.py  test_db_inspector.py  test_draft_creator.py  test_draft_generator.py  test_email_cache.py  test_filters.py  test_graph_client.py  test_message_fetcher.py  test_scanner.py  test_scheduling.py  test_state_store.py  test_style_corpus.py  test_style_eval.py  test_text_utils.py
